--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           Your contribution helps families access nutrition education and practical tools.
         </p>
         <a
-          href="#"
+          href="https://www.zeffy.com/en-CA/donation-form/support-our-work-28"
           class="inline-block mt-10 px-8 py-4 bg-green-600 text-white text-lg rounded-xl shadow hover:bg-green-700 transition"
         >
           Donate
